Fix containers not centered

--- a/style.css
+++ b/style.css
@@ -451,6 +451,7 @@ a {
 
     .card {
         width: 60vw;
+        margin: 0 auto;
     }
 
     .card-image {
